Cleans index.html

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <base href="/">
-    <title></title>
+    <title>d3db</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -25,7 +25,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container" ng-include="'partials/main'" ng-controller="MainCtrl"></div>
+    <div class="container" ng-controller="MainCtrl"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
 <!--      <script>
@@ -56,7 +56,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script type="text/javascript" src="/scripts/app.js"></script>
         <script type="text/javascript" src="/scripts/controllers/main.js"></script>
-        <script type="text/javascript" src="/scripts/controllers/navbar.js"></script>
+    <!--     <script type="text/javascript" src="/scripts/controllers/navbar.js"></script> -->
         <!-- endbuild -->
 </body>
 </html>
