--- a/app/views/index.html
+++ b/app/views/index.html
@@ -15,9 +15,9 @@
     <!-- Add your site or application content here -->
     <div class="container" ng-controller="MainCtrl">
 
-    <ul ng-repeat="item in data | orderByPriority">
+    <ul ng-repeat="item in data">
       <li>
-        <div ng-model="item.$priority">
+        <div ng-model="item">
           {{ item }}
         </div>
       </li>
