Adds simple graph from example

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,6 +13,7 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/vendor/assets/fonts/
 body {
     padding-top: 20px;
     padding-bottom: 20px;
+    background-color: gray;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
