--- a/app/views/index.html
+++ b/app/views/index.html
@@ -15,13 +15,19 @@
     <!-- Add your site or application content here -->
     <div class="container" ng-controller="MainCtrl">
 
-    <ul ng-repeat="item in data">
+      <div id="chart">
+
+      <svg></svg>
+
+      </div>
+
+<!--     <ul ng-repeat="item in data">
       <li>
         <div ng-model="item">
           {{ item }}
         </div>
       </li>
-    </ul>
+    </ul> -->
 
     </div>
     <!-- build:js(app) scripts/vendor.js -->
@@ -33,10 +39,13 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/firebase/firebase.js"></script>
     <script src="bower_components/angularfire/angularfire.js"></script>
+    <script src="bower_components/d3/d3.js"></script>
+    <script src="bower_components/nvd3/nv.d3.js"></script> 
 
     <!-- endbower -->
 
 
+    <script type="text/javascript" src="/scripts/helpers.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/controllers/main.js"></script>
 
