Adds new favicon and stats controller

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,6 +21,9 @@
 
       </div>
 
+      <div class='stats' ng-controller='statsCtrl'> Random Div
+      </div>
+
 <!--     <ul ng-repeat="item in data">
       <li>
         <div ng-model="item">
