--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,8 +21,11 @@
 
       </div>
 
-      <div class='stats' ng-controller='statsCtrl'> Random Div
-      </div>
+      <form  ng-submit="submit()" ng-controller='inputCtrl'>
+      try it !
+      <input type='text' ng-model='input' placeholder='enter graph num, x, y ..'>
+      <!-- <input type='text' ng-model='values' placeholder='type x,y value pair here ..'> -->
+      </form>
 
 <!--     <ul ng-repeat="item in data">
       <li>
