Adds login route

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -26,8 +26,8 @@
       try it !
       input in the form: graphNumber,x,y
       <input type='text' ng-model='input' placeholder='enter graph num, x, y ..'>
-      <!-- <input type='text' ng-model='values' placeholder='type x,y value pair here ..'> -->
-      </form> -->
+      <! <input type='text' ng-model='values' placeholder='type x,y value pair here ..'> -->
+      <!-- </form> -->
 
 <!--     <ul ng-repeat="item in data">
       <li>
@@ -47,6 +47,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script> -->
     <script src="bower_components/firebase/firebase.js"></script>
     <script src="bower_components/angularfire/angularfire.js"></script>
+    <script src="bower_components/firebase-simple-login/firebase-simple-login.js"></script>
     <script src="bower_components/d3/d3.js"></script>
     <script src="bower_components/nvd3/nv.d3.js"></script> 
 
