Adds login with google functionality

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -13,4 +13,8 @@
     <!-- <input type='text' ng-model='values' placeholder='type x,y value pair here ..'> -->
     </form>
 
+    <div ng-model='user'>
+    welcome, {{ user }}
+    </div>
+
   </div>
