--- a/app/views/home.html
+++ b/app/views/home.html
@@ -8,8 +8,9 @@
 
     <form  ng-submit="submit()" ng-controller='inputCtrl'>
     try it !
-    input in the form: graphNumber,x,y
+    input in the form: graphNumber,x,y (eg 1,20,20)
     <input type='text' ng-model='input' placeholder='enter graph num, x, y ..'>
+    OR: send a post request to /data: eg: curl --data 'gn=1&ts=20&val=20' http://d3db.azurewebsites.net/data
     <!-- <input type='text' ng-model='values' placeholder='type x,y value pair here ..'> -->
     </form>
 
